--- a/app/globals.css
+++ b/app/globals.css
@@ -38,7 +38,8 @@
   /* Custom breakpoints */
   --breakpoint-sm: 420px;
   --breakpoint-md: 768px;
-  --breakpoint-lg: 1280px;
+  --breakpoint-xl: 1024px;
+  --breakpoint-xl: 1280px;
 }
 
 body {
@@ -68,6 +69,11 @@ body {
   @media (min-width: 768px) {
     .container {
       max-width: 768px;
+    }
+  }
+  @media (min-width: 1024px) {
+    .container {
+      max-width: 1024px;
     }
   }
   @media (min-width: 1280px) {
