--- a/app/globals.css
+++ b/app/globals.css
@@ -26,7 +26,7 @@
   --color-text-dark: #0e0e0e; /* Light gray for dark mode text */
 
   --color-border-light: #d8d8d8; /* Light gray for light mode borders */
-  --color-border-dark: #4b5563; /* Dark gray for dark mode borders */
+  --color-border-dark: #303030; /* Dark gray for dark mode borders */
   --color-shadow-light: 0 1px 2px rgba(0, 0, 0, 0.05);
   --color-shadow-dark: 0 1px 2px rgba(0, 0, 0, 0.2);
 
